--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_BASE_URL= https://jtbacked-backend.onrender.com/api/v1
 NEXTAUTH_SECRET=Gw21OYnlabVUF0QJF28nhVB7qc+woqPCzXXkoDAauCQ=
 NEXTAUTH_URL=http://localhost:3000
+
+NEXT_PUBLIC_PIN="123456"
